# exam-kit

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
studykit/cli/: app.py  display.py
studykit/core/: grader.py  models.py  parser.py  quiz_engine.py  reporter.py
studykit/gui/: app.py  essay_result_view.py  essay_view.py  home_view.py  quiz_view.py  result_view.py  theme.py  widgets.py
testbanks/: README.md  quiz_ch2.md
testbanks/Computer Network/essay/: Computer network (1).md  Computer network (2).md  Computer_network_tu_luan.md  Tự luận chương 1.md  Tự luận chương 2.md
testbanks/Computer Network/multiple_choice/: Chương 1 phần 1.md  Chương 1 phần 2.md  Chương 1 phần 3.md  Chương 2 phần 1.md  Chương 2 phần 2.md  Chương 2 phần 3.md  Chương 2 phần 4.md  Chương 2 phần 5.md  Chương 3 phần 3.md  Chương 3 phần 5.md  Chương 3 phần 6.md  Chương 3 phần 7.md  Chương 4 phần 1.md  Chương 4 phần 2.md  Chương 4 phần 3.md  Chương 4 phần 4.md  Chương 4 phần 5.md  Chương 4 phần 6.md  Chương 4 phần 7.md  Chương 4 phần 8.md  Tổng hợp chương 1.md  Tổng hợp chương 2.md  Tổng hợp chương 3.md  Tổng hợp chương 4.md  quiz_ch2.md  quiz_chapter3_tcp (1).md  quiz_chapter3_tcp (2).md  quiz_chapter3_tcp (4).md  quiz_chapter3_tcp.md  quiz_chapter3_transport_layer.md
testbanks/example/: questions.yaml
