[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "quiz-master" # Bạn có thể đổi tên dự án
version = "0.1.0"
description = "CLI/GUI tool for multiple-choice and essay quizzes"
readme = "README.md"
requires-python = ">=3.10"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --cov=core"
testpaths = [
    "tests",
]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
]
ignore = []

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true